# rted

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
run_scripts/: build_projects.sh
run_scripts/task_n1/: run_task_n1.sh
run_scripts/task_n2/: run_bbg_proc.sh  run_server_proc.sh  run_stm32_proc.sh
task_n1/: CMakeLists.txt  task1.c
task_n2/GPS/: GPS.hpp
task_n2/PangoBBG/: CMakeLists.txt
task_n2/PangoBBG/include/: PangoBBG.hpp
task_n2/PangoBBG/src/: PangoBBG.cpp
task_n2/PangoSTM32/: CMakeLists.txt
task_n2/PangoServer/: CMakeLists.txt  main.cpp
task_n2/PangoServer/include/: PangoServer.hpp
task_n2/PangoServer/src/: PangoServer.cpp
task_n2/PangoUnit/: CMakeLists.txt  bbg_main.cpp  stm32_main.cpp
task_n2/PangoUnit/include/: PangoBBG.hpp  PangoSTM32.hpp
task_n2/PangoUnit/src/: PangoBBG.cpp  PangoSTM32.cpp
